Reporting: Optimierungen der Geschwindigkeit im Bereich GOSt-Laufbahnplanung
String null durch Empty Ersetzung pro Feld statt Reflexion.